restore v1 as it was OK